--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <ul>
 <li><a href="https://baiano20.github.io/Barbearia-Alura-Bryan/"> HOME</a></li>
 <li><a href="https://baiano20.github.io/Barbearia-Alura-Bryan-home/"> PRODUTOS</a></li>
-<LI><a>CONTATOS</a></LI>
+<li><a href="https://baiano20.github.io/Barbearia-Alura_Contatos/"> CONTATOS</a></li>
 
     </ul>
 </nav class="lista">
