--- a/index.html
+++ b/index.html
@@ -21,10 +21,48 @@
 <li><a href="https://baiano20.github.io/Barbearia-Alura-Bryan-home/"> PRODUTOS</a></li>
 <li><a href="https://baiano20.github.io/Barbearia-Alura_Contatos/"> CONTATOS</a></li>
 
-    </ul>
-</nav class="lista">
+ </ul>
+</nav>
+
+</div>
+
 </header>
 
+<main>
+    <ul class="produtos">
+      <li>
+         <h2>Cabelo</h2>
+         <img class="foto" src="cabelo.jpg" alt="">
+          <p class="descrição">Na tesoura ou máquina, como o cliente 
+         preferir </p>
+         <p class="preço">R$25,00</p>
+       </li>
+ 
+       <li>
+         <h2>Barba</h2>
+         <img class="foto" src="barba.jpg" alt="">
+          <p class="descrição">Corte e desenho Profissional de barba</p>
+          <p class="preço">R$18,00</p>
+       
+       
+       </li>
+ 
+       <li>
+         <h2>Cabelo+Barba</h2>
+         <img class="foto" src="cabelo+barba.jpg" alt="">
+          <p class="descrição">Pacote completo de cabelo e barba</p>
+          <p class="preço">R$35,00</p>
+
+        </li>
+ 
+
+    </ul>
+
+</main>   
+
+<footer>
+    <img src="logo-branco.png" alt="">
+    </footer>
 
 </body>
-</html>
+</html
