--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
-<header class="cabeçalho">
+    <header class="cabeçalho">
+      <div class="caixa">
 
     <h1><img src="logo.png" alt=""></h1>
-
-    <nav>
-
-
-    <ul>
+    
+<nav>
+<ul>
 <li><a href="https://baiano20.github.io/Barbearia-Alura-Bryan/"> HOME</a></li>
 <li><a href="https://baiano20.github.io/Barbearia-Alura-Bryan-home/"> PRODUTOS</a></li>
 <li><a href="https://baiano20.github.io/Barbearia-Alura_Contatos/"> CONTATOS</a></li>
