--- a/Barbearia alura bryan/index.html
+++ b/Barbearia alura bryan/index.html
@@ -17,8 +17,9 @@
     
 <nav>
 <ul>
-    <li><a href="https://baiano20.github.io/Barbearia-Alura-Bryan/"> HOME</a></li>
-    <li><a href="https://baiano20.github.io/Barbearia-Alura-Bryan-home/"> PRODUTOS</a></li>
+  <li><a href="https://baiano20.github.io/Barbearia-Alura-Bryan/"> HOME</a></li>
+  <li><a href="https://baiano20.github.io/Barbearia-Alura-Bryan-home/"> PRODUTOS</a></li>
+  <li><a href="https://baiano20.github.io/Barbearia-Alura_Contatos/"> CONTATOS</a></li>
 </ul>
 </nav>
 
